# file2form

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  redis.conf
app/: errors.py  exceptions.py  main.py
app/api/: __init__.py  dependencies.py  extract.py  health.py  lifespan.py  middleware.py
app/logging/: __init__.py  context.py  filters.py  setup.py
app/models/: __init__.py  extract.py  parse.py
app/prompts/: groq_v1.yml  openai_v1.yml
app/services/: __init__.py  cache.py  ingest.py  llm_client.py  post_process.py  prompt_manager.py  prompt_runner.py
tests/: test_extract.py
