[project]
name = "file2form"
version = "0.1.0"
description = "Extract relevant form data from files using FastAPI and OpenAI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "groq>=1.0.0",
    "langdetect>=1.0.9",
    "openai>=2.15.0",
    "redis[hiredis]>=7.1.0",
    "tika>=3.1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning",
]